chore: integrated tailwind css and made sidebar responsive for mobile scrrens

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{
   margin: 0;
   padding: 0;
@@ -16,7 +20,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: fixed;
   background-image: linear-gradient(to bottom right, #E6F3ED, #E9DCD5,#DFE6E8 );
- 
   
 }
 
