--- a/src/components/Main/Sidebar.scss
+++ b/src/components/Main/Sidebar.scss
@@ -3,7 +3,7 @@
 		display: flex;
 		align-items: center;
 		height: fit-content;
-		padding: 2rem;
+		padding: 1rem;
 		margin: 2rem auto;
 		border-radius: 1rem;
 		color: aliceblue;
@@ -17,7 +17,6 @@
 	.side-head {
 		display: flex;
 		align-items: center;
-		font-size: 1.8rem;
 		margin-top: 1rem;
 		margin-bottom: 2rem;
 		font-weight: 500;
@@ -30,7 +29,7 @@
 .list {
 	font-size: 1.8rem;
 	font-weight: 500;
-	margin-top: 3rem;
+	margin-top: 1rem;
 
 	.list-head {
 		color: #000;
@@ -44,11 +43,9 @@
 	}
 	.list-item {
 		display: flex;
+		height: 3rem;
+		align-items:center;
 
-		cursor: pointer;
-
-		.list-icon {
-			margin: 3px 0;
-		}
+		cursor: pointer;	
 	}
 }
