--- a/src/components/Main/Sidebar.scss
+++ b/src/components/Main/Sidebar.scss
@@ -3,7 +3,7 @@
 		display: flex;
 		align-items: center;
 		height: fit-content;
-		padding: 1rem;
+		padding: 2rem;
 		margin: 2rem auto;
 		border-radius: 1rem;
 		color: aliceblue;
@@ -17,6 +17,7 @@
 	.side-head {
 		display: flex;
 		align-items: center;
+		font-size: 1.8rem;
 		margin-top: 1rem;
 		margin-bottom: 2rem;
 		font-weight: 500;
@@ -29,7 +30,7 @@
 .list {
 	font-size: 1.8rem;
 	font-weight: 500;
-	margin-top: 1rem;
+	margin-top: 3rem;
 
 	.list-head {
 		color: #000;
@@ -43,9 +44,11 @@
 	}
 	.list-item {
 		display: flex;
-		height: 3rem;
-		align-items:center;
 
-		cursor: pointer;	
+		cursor: pointer;
+
+		.list-icon {
+			margin: 3px 0;
+		}
 	}
 }
